--- a/pages/publish/index.less
+++ b/pages/publish/index.less
@@ -38,7 +38,14 @@
         position: fixed;
         bottom:0;
         width: 100%;
-        height: 100rpx;
+        .submit-btn{
+            background: #fc5366;
+            color: #fff;
+            border-radius:0rpx;
+        }
+        .btnhover{
+            background: #ff8391;
+        }
     }
 }
 
