--- a/personal/pages/drawing/index.less
+++ b/personal/pages/drawing/index.less
@@ -12,4 +12,29 @@
         height: 60rpx;
         font-size: 24rpx;
     }
+    .drawing{
+        .drawing-text{
+            font-size: 26rpx;
+            font-weight: bold;
+            margin-left: 28rpx;
+        }
+        .figure{
+            font-size: 24rpx;
+            color: #999999;
+            margin-top: 20rpx;
+            .title{
+                margin-left: 28rpx;
+                margin-right: 20rpx;
+            }
+        }
+    }
+    .btn-draw{
+        width: 100%;
+        margin-top: 140rpx;
+        text-align: center;
+    }
+}
+
+.rmb-symbol{
+    font-size: 22rpx;
 }
